# prosody-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  Readme.md  docker-compose.yaml  pyproject.toml  pytest.ini  release-please-config.json  tempo.yaml  tox.ini
.github/workflows/: audit.yaml  general.yaml  pr.yaml  quality.yaml  release.yaml  release.yml
examples/: keyed_state_typed.py  keyed_state_windowing.py  requirements.txt  tracing.py
python/prosody/: __init__.py  __init__.pyi  context.pyi  errors.py  errors.pyi  handler.py  handler.pyi  message.py  prosody.pyi  state.py  state.pyi  timer.py
src/: admin.rs  client.rs  context.rs  entrypoint.rs  handler.rs  lib.rs  logging.rs  message.rs  state.rs  util.rs
src/admin/: config.rs  mod.rs
src/client/: config.rs  format.rs  mod.rs  mode.rs  state.rs
tests/: test_keyed_state.py  test_keyed_state_tracing.py  test_keyed_state_validation.py  test_prosody.py  test_state.py  test_tracing_integration.py
tests/typecheck/: check_wheel.py  consumer.py  mypy.ini  negative.py
