[package]
authors = ["Josh Griffith <joshua.griffith@realgeeks.com>"]
categories = ["api-bindings", "asynchronous", "database"]
description = "Python bindings for the Prosody Kafka client library"
edition = "2024"
homepage = "https://github.com/cincpro/prosody-py"
keywords = ["bindings", "client", "kafka", "prosody", "python"]
license = "UNLICENSED"
name = "prosody-py"
readme = "Readme.md"
repository = "https://github.com/cincpro/prosody-py"
version = "2.1.0"

[lib]
crate-type = ["cdylib"]
name = "prosody"

[dependencies]
chrono = "0.4"
futures = "0.3"
opentelemetry = "0.31"
prosody = { git = "https://github.com/cincpro/prosody.git", rev = "438fedb5fa8e58f4f754f09c30dd43514723e0c8", features = [
    "libz-static",
] } # replace once we have a package manager
pyo3 = { version = "0.27", features = ["chrono"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pythonize = "0.27"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.46", features = ["rt-multi-thread"] }
tracing = { version = "0.1", features = ["log-always"] }
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3"

#[cfg(not(target_env = "msvc"))]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
absolute_paths = "warn"
blocks_in_conditions = "allow"
cargo = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
create_dir = "warn"
dbg_macro = "warn"
default_numeric_fallback = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "deny"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
missing_assert_message = "warn"
module_name_repetitions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_used = "deny"
verbose_file_reads = "warn"

[profile.release]
codegen-units = 1
lto = "fat"
