[build-system]
build-backend = "maturin"
requires = ["maturin>=1.14,<2.0"]

[project]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "opentelemetry-api>=1.44.0,<2.0.0",
    "threadsafe-async>=0.2.1,<1.0.0",
    "typing_extensions>=4.12.0",
]
description = "High-performance Python bindings for a Rust-based Kafka client"
dynamic = ["version"]
keywords = ["async", "client", "distributed", "kafka", "messaging"]
license = "MIT"
name = "prosody-events"
readme = "Readme.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "opentelemetry-exporter-otlp>=1.44.0,<2.0.0",
    "opentelemetry-sdk>=1.44.0,<2.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "pytest-watch>=4.2.0",
    "pytest>=9.1.1",
    "sentry-sdk>=2.66.0,<3.0.0",
]
sentry = ["sentry-sdk>=2.66.0,<3.0.0"]

[project.urls]
Homepage = "https://github.com/prosody-events/prosody-py"
Repository = "https://github.com/prosody-events/prosody-py"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.mypy]
# ``mypy_path`` resolves ``prosody`` from the source tree (mapping
# ``prosody.prosody`` to ``prosody.pyi``) so type-checking needs no maturin
# build. PEP 696 TypeVar defaults require mypy >= 1.11.
files = ["examples/keyed_state_typed.py"]
mypy_path = "python"
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
